ghost_kitchen_sre_k3s/ghost-kitchen-sre/k8s/kitchen-infra.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kitchen-sre
