ghost_kitchen_sre_k3s/ghost-kitchen-sre/k8s/traefik-gatewayclass.yaml
# traefik-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
spec:
  controllerName: traefik.io/gateway-controller
