ghost_kitchen_sre_k3s/ghost-kitchen-sre/k8s/app-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchen-agent
  namespace: kitchen-sre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent
  template:
    metadata:
      labels:
        app: agent
    spec:
      serviceAccountName: sre-agent-sa
        #runtimeClassName: gvisor  
      containers:
      - name: agent
        imagePullPolicy: Always
        image: si3mshady/aiops:agent-v5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchen-producer
  namespace: kitchen-sre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      #runtimeClassName: gvisor

      containers:
      - name: producer
        imagePullPolicy: Always
        command: ["python",  "kitchen_producer.py"]
        image: si3mshady/aiops:producer-v5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchen-dashboard
  namespace: kitchen-sre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      serviceAccountName: elite-dashboard-sa
      #runtimeClassName: gvisor  
      containers:
      - name: dashboard
        image: si3mshady/aiops:dashboard-v5
        command: ["/bin/sh", "-c"]
        args:
          - |
            echo "Starting Dashboard..."
            until streamlit run elite_dashboard.py --server.port 8501 --server.address 0.0.0.0; do
            echo "Dashboard crashed. Retrying in 5 seconds..."
            sleep 5
            done  
        imagePullPolicy: Always  
        ports:
        - containerPort: 8501
