ghost_kitchen_sre_k3s/ghost-kitchen-sre/k8s/ollama-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: kitchen-sre
spec:
  ports:
  - port: 11434
  selector:
    app: ollama
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: kitchen-sre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      #runtimeClassName: gvisor
      containers:
      - name: ollama
        image: ollama/ollama:latest
        ports:
        - containerPort: 11434
        volumeMounts:
        - name: ollama-storage
          mountPath: /root/.ollama
      volumes:
      - name: ollama-storage
        persistentVolumeClaim:
          claimName: ollama-pvc
