ghost_kitchen_sre_k3s/ghost-kitchen-sre/k8s/flink-job-infra.yaml
apiVersion: v1
kind: Service
metadata:
  name: flink-jobmanager
  namespace: kitchen-sre
spec:
  #type: NodePort
  ports:
  - name: rpc
    port: 6123
  - name: blob-server
    port: 6124
  - name: webui
    port: 8081
   # nodePort: 30081  
  selector:
    app: flink
    component: jobmanager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-jobmanager
  namespace: kitchen-sre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flink
      component: jobmanager
  template:
    metadata:
      labels:
        app: flink
        component: jobmanager
    spec:
      runtimeClassName: gvisor

      containers:
      - name: jobmanager
        imagePullPolicy: Always
        image: si3mshady/aiops:flink-v5    # The one built from Dockerfile.flink
        args: ["jobmanager"]
        ports:
        - containerPort: 6123
        - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-taskmanager
  namespace: kitchen-sre
spec:
  replicas: 2 # Initial scale
  selector:
    matchLabels:
      app: flink
      component: taskmanager
  template:
    metadata:
      labels:
        app: flink
        component: taskmanager
    spec:
      runtimeClassName: gvisor

      containers:
      - name: taskmanager
        imagePullPolicy: Always
        image: si3mshady/aiops:flink-v5   # Same image
        args: ["taskmanager"]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flink-route
  namespace: kitchen-sre
spec:
  parentRefs:
  - name: kitchen-gateway
    namespace: kitchen-sre
    sectionName: web
  hostnames:
  - "ghost.vision.ai"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /flink
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch   # This targets just the /flink part
          replacePrefixMatch: /      # Swaps /flink for /
    backendRefs:
    - name: flink-jobmanager
      port: 8081

  - matches:
    - path:
        type: PathPrefix
        value: /styles.
    - path:
        type: PathPrefix
        value: /runtime.
    - path:
        type: PathPrefix
        value: /main.
    - path:
        type: PathPrefix
        value: /polyfills.
    backendRefs:
    - name: flink-jobmanager
      port: 8081
